manifests/service.yml
apiVersion: v1
kind: Service
metadata:
  namespace: webserver-namespace
  name: webserver-svc
spec:
  type: ClusterIP
  selector:
    app: webserver
  ports:
  - name: todo-front
    protocol: TCP
    port: 2345
    targetPort: 5000

---

apiVersion: v1
kind: Service
metadata:
  namespace: webserver-namespace
  name: backend-svc
spec:
  type: ClusterIP
  selector:
    app: backend
  ports:
  - name: todo-backend
    protocol: TCP
    port: 2346
    targetPort: 3001
