manifests/statefulSet.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres-stet
  namespace: webserver-namespace
spec:
  selector:
    matchLabels:
      app: postgres
  serviceName: "postgres"
  replicas: 1
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
      - name: postgres
        image: postgres:15
        ports:
        - containerPort: 5432
        volumeMounts:
        - name: postgres-data-storage
          mountPath: /var/lib/postgresql/data  
  volumeClaimTemplates:
  - metadata:
      name: postgres-data-storage
    spec:
      accessModes: ["ReadWriteOnce"]
      storageClassName: local-path
      resources:
        requests:
          storage: 100Mi
---
apiVersion: v1
kind: Service
metadata:
  name: postgres-svc
spec:
  clusterIP: None
  selector:
    app: postgres
  ports:
  - port: 5432
    targetPort: 5432
